test/src/e2e_vm_tests/test_programs/should_pass/language/attributes_warnings/src/main.sw
script;

#[allow(foo)]
fn f1() {}

#[allow]
fn f2() {}

#[allow(dead_code, dead_code)]
fn f3() {}

fn main() {
    f1();
    f2();
    f3();
}
