test/src/e2e_vm_tests/test_programs/should_fail/type_alias_lib_shadowing/src/main.sw
script;

mod lib;

use lib::MyType;

#[allow(dead_code)]
struct MyStruct {}

#[allow(dead_code)]
type MyType = MyStruct;

fn main() {}
